# teradata-skills

./: AGENT.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md
.agents/plugins/: marketplace.json
.agents/plugins/teradata-mcp-server/: README.md
.agents/plugins/teradata-mcp-server/.codex-plugin/: plugin.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: marketplace.json  plugin.json
.cursor-plugin/: marketplace.json  plugin.json
scripts/: configure_hermes_external_dir.py  install-agent-skills.sh  materialize_skills.py
skills/teradata-mcp-customisation/: README.md
skills/teradata-mcp-customisation/.claude-plugin/: plugin.json
skills/teradata-mcp-customisation/skills/teradata-mcp-customisation/: SKILL.md
skills/teradata-react/: SKILL.md
skills/teradata-react/.codex-plugin/: plugin.json
skills/teradata-react/demo/backend/: .env.example
skills/teradata-react/demo/deploy/: Dockerfile.backend
skills/teradata-react/references/: best-practices-frontend.md  prior-art.md  styling.md
skills/teradata-react/skills/teradata-react/templates/backend/: .env.example  pyproject.toml
skills/teradata-react/skills/teradata-react/templates/backend/app/queries/: health.py
skills/teradata-react/templates/: README.template.md
skills/teradata-react/teradata-react/: README.md
skills/teradata-sql-jupyter/: README.md  plugin.json
skills/teradata-sql-jupyter/.claude-plugin/: plugin.json
skills/teradata-sql-jupyter/scripts/: _build_templates.py
skills/teradata-sql-jupyter/templates/: demo.ipynb  teaching.ipynb  user-guide.ipynb
(+95 files in other folders)
