[project]
name = "td-react-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sqlalchemy>=2.0",
  "teradatasqlalchemy>=20.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "cachetools>=5.3",
  "python-dotenv>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
